--- a/catalog_sections/30_financial_aid_and_scholarship.qmd
+++ b/catalog_sections/30_financial_aid_and_scholarship.qmd
@@ -1,6 +1,6 @@
 # FINANCIAL AID AND SCHOLARSHIPS
 
-Coe College provides comprehensive need-based and merit-based financial aid programs designed to help qualified students attend Coe regardless of their family financial situation. Detailed information about financial aid programs and financial aid policies and guidelines are published in the *Coe College Financial Aid Handbook*.  New students must accept their financial aid award by submitting a $300 enrollment fee by May 1^st^ for the Fall Term. Extensions may be requested by contacting the Student Financial Services. If a student does not respond by the stated deadline, Coe College cannot guarantee the availability of any funds offered in the financial aid award.
+Coe College provides comprehensive need-based and merit-based financial aid programs designed to help qualified students attend Coe regardless of their family financial situation. Detailed information about financial aid programs and financial aid policies and guidelines are published in the *Coe College Financial Aid Handbook*.  New students must accept their financial aid award by submitting a \$300 enrollment fee by May 1^st^ for the Fall Term. Extensions may be requested by contacting the Student Financial Services. If a student does not respond by the stated deadline, Coe College cannot guarantee the availability of any funds offered in the financial aid award.
 
 ### Academic Scholarship and Awards
 
@@ -55,7 +55,7 @@ The Coe College community values the ability each student has to make an impact 
 	 Coe has many endowed scholarships that have been established by generous alumni and friends of the College. Income from these scholarships is used primarily to support Coe funded merit- and need-based aid. Students awarded Coe aid may be asked to complete an ‘Endowed Scholarship Application.’ The Financial Aid Office will use information from this application to match students with endowed scholarships. Students designated to have their Coe aid funded by an endowed scholarship may be contacted by the Coe College Advancement Office with information about their donor. (**Note**: Endowed scholarships funds support Coe funded aid already granted to the student. Under no circumstances will the student receive additional funding beyond what has already been listed on the financial aid award letter.) Endowed scholarship funds are vital sources of assistance for many of our students. It will be requested that each student receiving funds from an endowed scholarship write a letter of thanks to the donor or the designated official. Donor information and letter suggestions will be provided by the Office of Advancement.  
 	 The **Federal Pell Grant** program is designed to provide financial assistance to eligible undergraduates. Application is made by filing a Free Application for Federal Student Aid (FAFSA).
 	 The Federal Pell Grant program provides grants to full- and part-time students and may be used at any eligible college or university that the student attends as an undergraduate or until the student receive a first baccalaureate degree. The award amount may vary according to the cost of the institution and the number of hours for which a student is enrolled. A student may receive no more than the equivalent of 12 full-time term awards. Students must be enrolled for three or more course credits per term to receive the full award. 
-	 The **Federal Supplemental Educational Opportunity Grant (SEOG)** program provides financial grant assistance to Pell Grant eligible undergraduates with exceptional financial need which, for the purposes of this program, is defined as those with the lowest EFC. The grants are made from funds provided by the federal government to Coe College. The College, in turn, selects needy students who have applied for financial aid and meet awarding criteria established by the federal government. SEOG awards at Coe are based on the availability of funding and can range from $100 up to $1,000 per academic year. These funds are limited and not all students who qualify can be assured that they will receive a SEOG grant.
+	 The **Federal Supplemental Educational Opportunity Grant (SEOG)** program provides financial grant assistance to Pell Grant eligible undergraduates with exceptional financial need which, for the purposes of this program, is defined as those with the lowest EFC. The grants are made from funds provided by the federal government to Coe College. The College, in turn, selects needy students who have applied for financial aid and meet awarding criteria established by the federal government. SEOG awards at Coe are based on the availability of funding and can range from \$100 up to \$1,000 per academic year. These funds are limited and not all students who qualify can be assured that they will receive a SEOG grant.
 
 	**State-Funded Grants and Scholarships**
 	**Iowa Tuition Grant (ITG)**
@@ -66,7 +66,7 @@ The Coe College community values the ability each student has to make an impact 
 
 ### Non-Need Based Gift Aid
 
-	The **Education Assistance for College and Higher Education (TEACH)** program is designed to provide financial assistance of up to $4,000 per academic year to current and prospective teachers. To qualify for a TEACH Grant a student must have scored above the 75th percentile on any portion of the ACT or SAT (including composite scores) or have a 3.25 cumulative grade point average. First-year students must have a final cumulative high school grade point average of at least a 3.25 and upperclassmen must maintain a minimum cumulative GPA of 3.25 each Term. In addition, a recipient must serve as a full-time teacher in a high-need field, in a school serving low-income students for at least four academic years within eight years. If a student does not complete the required teaching obligation, the grant must be repaid as a Direct Unsubsidized Federal Direct Stafford Loan with interest from the time the grant was disbursed.
+	The **Education Assistance for College and Higher Education (TEACH)** program is designed to provide financial assistance of up to \$4,000 per academic year to current and prospective teachers. To qualify for a TEACH Grant a student must have scored above the 75th percentile on any portion of the ACT or SAT (including composite scores) or have a 3.25 cumulative grade point average. First-year students must have a final cumulative high school grade point average of at least a 3.25 and upperclassmen must maintain a minimum cumulative GPA of 3.25 each Term. In addition, a recipient must serve as a full-time teacher in a high-need field, in a school serving low-income students for at least four academic years within eight years. If a student does not complete the required teaching obligation, the grant must be repaid as a Direct Unsubsidized Federal Direct Stafford Loan with interest from the time the grant was disbursed.
 
 + **Active Duty Military Benefits**
 	An individual who is currently serving in the military or who is the spouse or dependent child of a service member who is currently serving on active duty, may be eligible for funding offered through the Department of Defense Tuition Assistance program. Applicants are encouraged to check their eligibility status and amount for which they qualify with their service prior to enrolling.
@@ -75,7 +75,7 @@ The Coe College community values the ability each student has to make an impact 
 	The Iowa National Guard Educational Assistance Grant (NGEAP) provides annual awards to Iowa National Guard members who attend eligible Iowa colleges and universities. Eligibility is determined by the Iowa Adjutant General. Maximum individual awards cannot exceed the current average resident tuition rate at Iowa Regent Universities. 
 **GEAR UP Iowa Scholarship**
 + **ROTC Scholarships and Grants**
-ROTC Scholarships and Grants are available through Coe College. The College ROTC program provides on-campus leadership training in conjunction with a student’s current curriculum. The scholarship provides payment of up to full tuition and fees for a given academic year and approximately $600 per term for books, and a subsistence allowance of up to $500 per month up to 10 months per academic year.  ROTC-eligible students should contact the Student Financial Services to determine the impact this scholarship will have on their total financial aid package.
+ROTC Scholarships and Grants are available through Coe College. The College ROTC program provides on-campus leadership training in conjunction with a student’s current curriculum. The scholarship provides payment of up to full tuition and fees for a given academic year and approximately \$600 per term for books, and a subsistence allowance of up to \$500 per month up to 10 months per academic year.  ROTC-eligible students should contact the Student Financial Services to determine the impact this scholarship will have on their total financial aid package.
 
 + **Veterans’ Educational Benefits**
 The Veterans Administration administers programs for veterans and service people seeking assistance for education and training.  A veteran or dependent of a veteran who plans to receive educational benefits, as determined by the Department of Veteran Affairs, should contact the Registrar’s Office well in advance of enrollment to request certification.  Additional information about veterans’ benefits at Coe College, such as the application process for the various programs, available resources, as well as withdrawal and readmit policies for service members, can be found on the Veteran and Military Student webpage (https://www.coe.edu/admission/financial-aid-scholarships/resources/veterans-and-military-benefits).
